<resources>
    <string name="app_title">WhiteCoats</string>
    <string name="str_next">Next</string>
    <string name="tab_updates">FEEDS</string>
    <string name="tab_channels">CHANNELS</string>
    <string name="tab_chats">CHATS</string>
    <string name="tab_connects">CONNECTS</string>
    <string name="tab_about">About</string>
    <string name="tab_feeds">Feeds</string>
    <string name="tab_members">Members</string>
    <string name="tab_media">Media</string>
    <string name="tab_network">NETWORK</string>
    <string name="tab_feed">Feed</string>
    <string name="tab_drug_reference">Drug Reference</string>
    <string name="tab_medical_events">Medical Events</string>
    <string name="tab_spotlight">Spotlight</string>
    <string name="tab_community_feed">Feed</string>
    <string name="tab_doctor">Doctors</string>
    <string name="tab_organizations">Organizations</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string-array name="subscriptions_categories_array">
        <item>@string/section_community</item>
        <item>@string/section_conference</item>
        <item>@string/section_subscription</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="section_community">My Communities</string>
    <string name="section_conference">My Conferences</string>
    <string name="section_subscription">My Subscriptions</string>
    <string name="action_settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="str_invite_cnt">Invite participants</string>
    <string name="str_group_info">Group info</string>
    <string name="str_case_room_info">CaseRoom info</string>
    <string name="str_delete_conversation">Delete conversation</string>
    <string name="actionbar_save">SAVE</string>
    <string name="actionbar_edit">EDIT</string>
    <string name="actionbar_next">NEXT</string>
    <string name="actionbar_done">DONE</string>
    <string name="actionbar_create">CREATE</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_invite">Invite</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_upgrade_now">Upgrade Now</string>
    <string name="btn_view_offline">View Offline</string>
    <string name="dlg_wait_please">Loading. Please Wait....</string>
    <string name="alert_transcoding">Loading...</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="new_on_whitecoats">New on Whitecoats?</string>
    <string name="staylogged_in">Stay Signed In</string>
    <string name="register_now">Register Now</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="dlg_not_username_field_entered">Please provide Username</string>
    <string name="dlg_not_password_field_entered">Please enter your password</string>
    <string name="dlg_not_group_title_entered">Please enter a group name</string>
    <string name="dlg_not_all_fields_entered">Please provide Username and Password</string>
    <string name="dlg_not_firstname_field_entered">Please enter your first name</string>
    <string name="dlg_not_lastname_field_entered">Please enter your last name</string>
    <string name="dlg_not_email_field_entered">Please enter a valid email id</string>
    <string name="dlg_not_speciality_field_entered">Please enter your speciality</string>
    <string name="dlg_not_workplace_field_entered">Please enter your workplace</string>
    <string name="dlg_not_title_field_entered">Please provide event title</string>
    <string name="dlg_not_startdate_field_entered">Please provide start date</string>
    <string name="dlg_not_enddate_field_entered">Please provide end date</string>
    <string name="dlg_not_city_field_entered">Please enter your city of residence</string>
    <string name="no_internet">Device is not connected with internet. Please check your internet connection.</string>
    <string name="no_internet_small">No internet connection!</string>
    <string name="sorry_title">Sorry</string>
    <string name="alert_attachments_being_uploaded">Your attachments in this conversation are being uploaded. Please try again later.</string>
    <string name="alert_login_failed">Login Failed! Please try again later.</string>
    <string name="location_validation_msg">Please select relevant location</string>
    <string name="dlg_not_network_name">Please enter your name</string>
    <string name="dlg_not_speciality_name">Please enter your speciality</string>
    <string name="dlg_not_city_name">Please enter your city</string>
    <string name="dlg_not_clinic_name">Please enter your clinic/hospital</string>
    <string name="main_text">Create a new password for your\naccount</string>
    <string name="newpassword">New Password</string>
    <string name="label_old_password">Enter old password</string>
    <string name="label_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save_new_password">Save New Password</string>
    <string name="changepassword">Change Password</string>
    <string name="create_newpassword">Create new password</string>
    <string name="str_passwordmimimum">Minimum 8 characters. Case sensitive.</string>
    <string name="dlg_not_all_pass_fields_entered">New password and Confirm password required!!</string>
    <string name="dlg_not_reg_field_entered">First name,Last name and Email Id are required!!</string>
    <string name="action_search">Search</string>
    <string name="action_network_search">SEARCH</string>
    <string name="action_notification">Notifications</string>
    <string name="action_profile">Profile</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="str_heading">Whitecoats Registration</string>
    <string name="str_first">WhiteCoats is a network of verified practitioners only.\n Help us in validating your profile.</string>
    <string name="str_edtfirst">First Name</string>
    <string name="str_edtsecond">Last Name</string>
    <string name="str_second">Upload your State Medical Council Registration Certificate or a photo id to verify your credentials.</string>
    <string name="str_browsegallery_btn">Browse Gallery</string>
    <string name="str_takepicture_btn">Take a Photo</string>
    <string name="str_email">Email ID</string>
    <string name="str_agree">I agree to WhiteCoats </string>
    <string name="str_terms">Terms of Use</string>
    <string name="str_policies">Privacy Policy</string>
    <string name="str_and"> and </string>
    <string name="str_register">Register</string>
    <string name="title_activity_registration">Whitecoats Registration</string>
    <string name="str_phnuminfo">OTP will be sent</string>
    <string name="receive_all_article_info">You will receive articles from all specialities</string>
    <string name="str_resendvalidation">Resend verification link</string>
    <string name="str_didntrecieve">Didn\'t receive the email yet?</string>
    <string name="str_pleaseverify">Please verify your email ID to receive \nyour account password.</string>
    <string name="str_verifyemail">Verify Email</string>
    <string name="str_toverifyemail">To verify your email, click on the link sent to</string>
    <string name="str_select_contacts">Select Contacts</string>
    <string name="str_done">Done</string>
    <string name="str_phcontacts_btn">Phone Contacts</string>
    <string name="str_emailcontacts_btn">Contacts via Email</string>
    <string name="str_search_edt">Search</string>
    <string name="str_select_all">Select All</string>
    <string name="title_activity_selectcontacts">Select contacts</string>
    <string name="str_gmail">Gmail</string>
    <string name="str_yahoomail">Yahoo Mail</string>
    <string name="str_other_email">Other Email ID</string>
    <string name="str_msgOremail"><i>Messages/Email has been sent to selected contacts</i></string>
    <string name="str_tell_more">Tell more contacts about WhiteCoats</string>
    <string name="str_msg_done">Done</string>
    <string name="load_more_post">Loading more...</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="conversation_history">Conversation History</string>
    <string name="my_bookmarks">My Bookmarks</string>
    <string name="invite_contacts">Invite Contacts</string>
    <string name="logout">Logout</string>
    <string name="contacts">Contacts</string>
    <string name="caserooms">Caserooms</string>
    <string name="groups">Groups</string>
    <string name="my_caseromms">My CaseRooms</string>
    <string name="str_emailidvalid">We are in the process of verifying your profile.</string>
    <string name="str_working">You will receive an email with your WhiteCoats login details within the next 12 hours.</string>
    <string name="str_tellothers">Tell others about Whitecoats</string>
    <string name="str_isnowverified">is now verified.</string>
    <string name="str_emailverified">Email Verified</string>
    <string name="str_forgot_pw_heading">Forgot Password</string>
    <string name="str_passwordreset">Get your new password at your registerd email ID.</string>
    <string name="title_activity_overlay">OverlayActivity</string>
    <string name="title_activity_profile_list">Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="specialty">I am a (eg.cardiologist)</string>
    <string name="hint_specialty">Speciality</string>
    <string name="search_specialist">Search by specialist</string>
    <string name="search_speciality">Search by speciality</string>
    <string name="title_activity_location_status">LocationStatus</string>
    <string name="title_activity_basic_profile">BasicProfileActivity</string>
    <string name="action_done">DONE</string>
    <string name="str_title">Title</string>
    <string name="str_authors">Authors names separated by comma</string>
    <string name="str_journal">Name of journal</string>
    <string name="str_webpage_link">Webpage link</string>
    <string name="str_remove_mem">Remove this membership</string>
    <string name="action_help">Help</string>
    <string name="action_share">Share</string>
    <string name="label_select">Select</string>
    <string name="label_default_specialty">All Specialities</string>
    <string name="label_no_speciality_selected">Select at least one speciality</string>
    <string name="my_home_preferences">My Home Preferences</string>
    <string name="my_preferences">My Speciality Preferences</string>
    <string name="award_title">Award Title</string>
    <string name="presented_at">Presented at</string>
    <string name="year">Year</string>
    <string name="action_verify">Verify</string>
    <string name="str_remove">Remove</string>
    <string name="action_download">Download</string>
    <string name="home_page_set_text">Set Your Default Homepage</string>
    <string name="change_default_setting_text">You can always change your default preference anytime from the home page setting</string>
</resources>