<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vam.whitecoats.ui.activities.ProfileViewActivity">
    <item
        android:id="@+id/action_verify"
        android:orderInCategory="200"
        android:title="@string/action_verify"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_alert_white"/>
    <item
        android:id="@+id/action_terms_of_use"
        android:title="@string/str_terms"
        app:showAsAction="never|collapseActionView"/>

    <item
        android:id="@+id/action_reset_password"
        android:title="@string/changepassword"
        app:showAsAction="never|collapseActionView"
        android:visible="false"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never|collapseActionView"/>

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never|collapseActionView"/>
    <item
        android:id="@+id/action_download"
        android:title="@string/action_download"
        android:icon="@drawable/download_icon"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_profile_share"
        app:showAsAction="always"/>

</menu>
