<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/my_profile"
        android:title="My Profile"
        app:showAsAction="never|collapseActionView"/>
    <item
        android:id="@+id/my_home_preference"
        android:title="@string/my_home_preferences"
        app:showAsAction="never|collapseActionView"/>

    <item
        android:id="@+id/my_preferences"
        android:title="@string/my_preferences"
        app:showAsAction="never|collapseActionView"/>
    <item
        android:id="@+id/bookmarks"
        android:title="@string/my_bookmarks"
        app:showAsAction="never|collapseActionView"/>
    <item
        android:id="@+id/my_caserooms"
        android:title="@string/my_caseromms"
        android:visible="false"
        app:showAsAction="never|collapseActionView"/>
    <item
        android:id="@+id/invite"
        android:title="Invite to WhiteCoats"
        app:showAsAction="never|collapseActionView"/>

    <item
        android:id="@+id/action_help"
        android:title="Help"
        app:showAsAction="never|collapseActionView"/>

</menu>