<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fillViewport="true"
    android:background="#80ffffff"

    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         app:hintTextAppearance="@style/FloatLableColor">
        <EditText
            android:singleLine="true"
            android:inputType="textCapSentences|textMultiLine"
            android:hint="@string/str_title"
            android:id="@+id/edit_Pub_title"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:maxLength="100"/>
     </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:hintTextAppearance="@style/FloatLableColor">
        <EditText
            android:singleLine="true"
            android:inputType="textCapSentences|textMultiLine"
            android:hint="@string/str_authors"
            android:id="@+id/edit_authors_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ, "
            android:maxLength="150"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:hintTextAppearance="@style/FloatLableColor">

        <AutoCompleteTextView
            style="@style/App_AutoCompleteTextViewStyle"
            android:singleLine="true"
            android:inputType="textCapSentences|textMultiLine"
            android:hint="@string/str_journal"
            android:id="@+id/edit_journal_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ -:&amp;"
            android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:hintTextAppearance="@style/FloatLableColor"
            android:layout_marginBottom="12dp">
        <EditText
            android:singleLine="true"
            android:inputType="text|textNoSuggestions"
            android:hint="@string/str_webpage_link"
            android:id="@+id/edit_webpage_link"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:maxLength="100"/>
      </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal|bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <TextView
            android:id="@+id/remove_publications"
            android:layout_margin="20dp"
            android:drawablePadding="7dp"
            android:drawableLeft="@drawable/ic_delete"
            android:text="@string/str_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </LinearLayout>

</ScrollView>
