<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vam.whitecoats.ui.activities.DefaultHomePageActivity"
    android:background="#ececec">


    <ImageView
        android:id="@+id/image_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_default_home_page"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/set_default_text"/>


    <TextView
        android:id="@+id/set_default_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_page_set_text"
        android:layout_above="@+id/hint_text"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/app_green"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:text="@string/change_default_setting_text"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:textColor="#707070"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_centerInParent="true" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/associate_lay"
        android:layout_below="@+id/hint_text"
        android:layout_above="@+id/done_skip_lay"
        android:layout_marginTop="30dp">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/associationsList"
        android:background="@drawable/block"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />

    </RelativeLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:id="@+id/done_skip_lay"
      android:layout_marginTop="14dp">

    <Button
        android:id="@+id/done_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_done"
        android:background="@drawable/buttons_profile"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Skip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/done_action"
        android:layout_marginBottom="16dp"/>
</RelativeLayout>

</RelativeLayout>
